<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.journal.JournalAddUpdateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/journal_title"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fill_journal"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="5"
            android:minHeight="150dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"

        android:fontFamily="@font/medium"
        android:background="@drawable/btn_background"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/image_splash"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_predict"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recommendation"
        android:layout_marginTop="8dp"
        android:visibility="gone"

        android:fontFamily="@font/medium"
        android:background="@drawable/btn_background"/>
</LinearLayout>
