<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="16dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardBackgroundColor="@color/blue3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/article_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/article_name"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/medium"
            android:maxLines="2"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/iv_photo"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc_article"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description"
            android:textSize="12sp"
            android:textStyle="normal"
            android:maxLines="2"
            android:textColor="@color/white"
            android:fontFamily="@font/medium"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/iv_photo"
            card_view:layout_constraintTop_toBottomOf="@id/article_name" />

        <TextView
            android:id="@+id/tvItemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="normal"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:fontFamily="@font/medium"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/desc_article"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>