<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.explore.ExploreFragment">

    <!-- Artikel Section -->
    <androidx.cardview.widget.CardView
        android:id="@+id/article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_article"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@color/blue4"
                tools:ignore="ContentDescription"
                android:src="@drawable/image_article"/>

            <TextView
                android:id="@+id/tv_article_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:text="@string/article_rec"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue2"
                android:fontFamily="@font/medium"
                android:padding="6dp"
                app:drawableEndCompat="@drawable/ic_detail" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Musik Section -->
    <androidx.cardview.widget.CardView
        android:id="@+id/music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_music"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@color/blue4"
                tools:ignore="ContentDescription"
                android:src="@drawable/image_music"/>

            <TextView
                android:id="@+id/tv_music_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:text="@string/music"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue2"
                android:fontFamily="@font/medium"
                android:padding="6dp"
                app:drawableEndCompat="@drawable/ic_detail" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Film Section -->
    <androidx.cardview.widget.CardView
        android:id="@+id/movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@color/blue4"
                tools:ignore="ContentDescription"
                android:src="@drawable/image_film"/>

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:text="@string/film"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue2"
                android:fontFamily="@font/medium"
                android:padding="6dp"
                app:drawableEndCompat="@drawable/ic_detail" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
